Prepped for GH Pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/zoo-project/styles.css">
 
     <title>Petting Zoo</title>
 </head>
@@ -102,6 +102,6 @@
     </footer>
 
 
-    <script src="./scripts/carousel.js"></script>
+    <script src="/zoo-project/scripts/carousel.js"></script>
 </body>
 </html>
