Food and responsivity

--- a/index.html
+++ b/index.html
@@ -69,27 +69,27 @@
     <h2>Food Court</h2>
     <div class="food-court">
         <div class="resturant">
-            <img src="./" alt="Chick-Fil-A Location Image">
+            <img src="/zoo-project/imgs/chick-fil-a.png" alt="Chick-Fil-A Location Image">
             <h3>Chick-Fil-A</h3>
         </div>
 
         <div class="resturant">
-            <img src="./" alt="Freddy's Frozen Custard & Steakburgers Location Image">
+            <img src="/zoo-project/imgs/freddy.jpeg" alt="Freddy's Frozen Custard & Steakburgers Location Image">
             <h3>Freddy's Frozen Custard & Steakburgers</h3>
         </div>
 
         <div class="resturant">
-            <img src="./" alt="In n' Out Location Image">
+            <img src="/zoo-project/imgs/innout.png" alt="In n' Out Location Image">
             <h3>In n' Out</h3>
         </div>
 
         <div class="resturant">
-            <img src="./" alt="McDonald's Location Image">
+            <img src="/zoo-project/imgs/mcdonalds.jpg" alt="McDonald's Location Image">
             <h3>McDonald's</h3>
         </div>
 
         <div class="resturant">
-            <img src="./" alt="Starbucks Location Image">
+            <img src="/zoo-project/imgs/starbucks.jpg" alt="Starbucks Location Image">
             <h3>Starbucks</h3>
         </div>
     </div>
